# ircd-phatbox

./: .gitignore  BUGS  CREDITS  INSTALL  Makefile.am  Makefile.in  README.FIRST  README.md  RELNOTES  aclocal.m4  configure  configure.ac  install-mod.sh  main.c
.github/workflows/: ci.yml
bandb/: Makefile.in  bandb.c  bantool.c
bandb/sqlite3/: Makefile.in
contrib/: Makefile.in  m_flags.c
doc/: challenge.txt  example.conf  example.efnet.conf  genopercert.sh  genssl.sh  index.txt  ircd-phatbox.init  ircd_crontab.sh  logfiles.txt  phatbox-rotate.sh  services.txt  unicode.txt  whats-new-3.1.txt
help/: Makefile.in
include/: charset.h  config.h  hash.h  ircd.h  match.h  modules.h  s_conf.h  setup.h.in  struct.h  unicode_data.h  unicode_tables.h  utf8.h  version.h
libltdl/: Makefile.in  aclocal.m4  configure  configure.ac
libratbox/: Makefile.in  aclocal.m4  configure  configure.ac
libratbox/include/: commio-int.h  libratbox_config.h.in  librb-config.h  ratbox_lib.h
libratbox/libltdl/: Makefile.am  Makefile.in  (+2 more)
modules/: Makefile.am  Makefile.in  m_gungline.c  m_info.c  m_map.c  m_set.c  m_stats.c  m_trace.c  m_version.c
resolver/: Makefile.in  resolver.c
src/: Makefile.am  Makefile.in  bandbi.c  cache.c  channel.c  charset.c  client.c  dns.c  getopt.c  hash.c  ircd.c  match.c  modules.c  newconf.c  s_conf.c  s_log.c  s_user.c  sslproc.c  substitution.c  supported.c  unicode_algo.c  unicode_data.c  unicode_tables.c  utf8.c  version.c.SH
ssld/: Makefile.in  ssld.c
tests/: test_charset.c
tools/: Makefile.in  gen_unicode_tables.py  mkpasswd.c
(+12 files in other folders)
